fix: Make customize button visible in dark mode

--- a/css/main.css
+++ b/css/main.css
@@ -258,7 +258,6 @@ img#oops {
     box-shadow: none;
     background: none;
     border: 0;
-    color: var(--primary-text);
     padding: 0.75rem;
 }
 
